:boom: Mejoranod el diseño y rutas

--- a/views/partials/products.hbs
+++ b/views/partials/products.hbs
@@ -1,11 +1,11 @@
 {{#each products}}
 <div class="col mb-4">
-    <div class="card">
+    <div class="card bg-primary-subtle">
         <div class="cards">
-            <img src="img/{{this}}.png" class="card-img-top " alt="{{this}}">
+            <img src="/img/{{this}}.png" class="card-img-top" alt="{{this}}">
         </div>
         <div class="card-body">
-            <h5 class="card-title">{{this}}</h5>
+            <h5 class="card-title text-center">{{this}}</h5>
         </div>
     </div>
 </div>
