--- a/views/partials/menu.hbs
+++ b/views/partials/menu.hbs
@@ -1,7 +1,7 @@
-<nav class="navbar bg-success">
+<nav class="navbar bg-success-subtle">
     <div class="container justify-content-center">
         <a class="navbar-brand" href="#">
-            <img src="img/carrito.jpg"  alt="Bootstrap" width="30" height="24">
+            <img src="/img/carrito.jpg"  alt="Bootstrap" width="50" height="34">
         </a>
     </div>
 </nav>
